# src/api/services/UsersService.ts
@@ -9,44 +9,15 @@ import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
 export class UsersService {
     /**
-     * Получить пользователя
-     * @param id
-     * @param email
-     * @param username
-     * @returns UserWithVerses OK
-     * @throws ApiError
-     */
-    public static getApiUsers(
-        id?: string,
-        email?: string,
-        username?: string,
-    ): CancelablePromise<UserWithVerses> {
-        return __request(OpenAPI, {
-            method: 'GET',
-            url: '/api/users',
-            query: {
-                'id': id,
-                'email': email,
-                'username': username,
-            },
-            errors: {
-                400: `Нужно передать id/email/username`,
-                404: `Не найден`,
-            },
-        });
-    }
-    /**
-     * Создать/обновить пользователя по email
+     * Создать/обновить пользователя по telegramId
      * @param requestBody
      * @returns User Создан/обновлён
      * @throws ApiError
      */
     public static postApiUsers(
         requestBody: {
-            name: string;
-            username: string;
-            avatar: string;
-            email: string;
+            telegramId: string;
+            translation?: string;
         },
     ): CancelablePromise<User> {
         return __request(OpenAPI, {
@@ -57,48 +28,23 @@ export class UsersService {
         });
     }
     /**
-     * Получить пользователя по id
-     * @param id
+     * Получить пользователя по telegramId
+     * @param telegramId
      * @returns UserWithVerses OK
      * @throws ApiError
      */
-    public static getApiUsers1(
-        id: string,
+    public static getApiUsers(
+        telegramId: string,
     ): CancelablePromise<UserWithVerses> {
         return __request(OpenAPI, {
             method: 'GET',
-            url: '/api/users/{id}',
+            url: '/api/users/{telegramId}',
             path: {
-                'id': id,
+                'telegramId': telegramId,
             },
             errors: {
                 404: `Не найден`,
             },
-        });
-    }
-    /**
-     * Обновить пользователя
-     * @param id
-     * @param requestBody
-     * @returns User OK
-     * @throws ApiError
-     */
-    public static patchApiUsers(
-        id: string,
-        requestBody: {
-            name?: string;
-            username?: string;
-            avatar?: string;
-        },
-    ): CancelablePromise<User> {
-        return __request(OpenAPI, {
-            method: 'PATCH',
-            url: '/api/users/{id}',
-            path: {
-                'id': id,
-            },
-            body: requestBody,
-            mediaType: 'application/json',
         });
     }
 }
